--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,12 @@
 margin: 0px;
 padding: 0px;
 }
-.header{
+.image{
+background-image: url("ssc.PNG");
+background-repeat: no-repeat;
+background-size: cover;
+}
+body{
 	width: 30%;
 	margin: 50px auto 0px;
 	background: red;
